# gophercar-ros

./: .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: linter.yml
catkin_ws/: docker-compose.yml  go.mod  go.sum
catkin_ws/code/actuator-node/: README.md
catkin_ws/code/camera-node/: main.py
catkin_ws/code/csi_camera/: README.md  main.go  main.py
catkin_ws/code/drive-node/: main.go  notes.txt
catkin_ws/code/dumb_camera_node/: main.py
catkin_ws/code/follow-node/: main.go  main.py
catkin_ws/code/goroslib/: main.go
catkin_ws/code/joy-goroslib/: README.md  main.go
catkin_ws/code/stats_aggregator_node/: main.go
catkin_ws/code/steer-sync-node/: main.py
catkin_ws/code/webserver/: go.sum  main.go
catkin_ws/config/: aggregator.json  joy_teleop-ps4.yml
catkin_ws/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh
catkin_ws/scripts/: launch_all.sh
catkin_ws/src/actuator_node/: README.md  joy.go  main.go
catkin_ws/src/camera_node/: main.py
catkin_ws/src/csi_camera_node/: main.py
catkin_ws/src/face_detect_node/: README.md
catkin_ws/src/follow_node/: main.go
catkin_ws/src/object_tracker_node/: README.md  main.go  queue.go
catkin_ws/src/record_node/: CMakeLists.txt  README.md  main.py  package.xml  setup.py
catkin_ws/src/record_node/msg/: Actuator.msg
catkin_ws/src/record_node/src/: main.py
catkin_ws/src/stats_aggregator_node/: main.go
catkin_ws/src/tfmini_lidar_node/: README.md  main.go
docker/: Dockerfile-ros-base  Dockerfile-ros-joy  docker-compose.netdata.yml  docker-compose.yml
(+18 files in other folders)
